Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-418

avro.h generates errors when included in C++ code

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 1.3.2
    • c
    • None

    Description

      avro.h cannot be included in C++ code without errors

      Attachments

        1. AVRO-418.patch
          2 kB
          Matt Massie
        2. avro_build_with_cpp.diff
          12 kB
          Bruce Mitchener

        Activity

          People

            brucem Bruce Mitchener
            massie Matt Massie
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: