AVRO-418. avro.h generates errors when included in C++ code. Contributed by Bruce Mitchener.

git-svn-id: https://svn.apache.org/repos/asf/hadoop/avro/trunk@923482 13f79535-47bb-0310-9956-ffa450edef68