lang/c/tests/test_cpp.cpp
@@ -1,0 +1,7 @@
+#include "avro.h"
+
+int main(int argc, char **argv)
+{
+	return 0;
+}
+
